syntax = "proto3";

package comet;

option go_package="github.com/ykds/zura/proto/comet;comet";

import "proto/protocol/protocol.proto";

message PushMsgRequest {
  int32 op = 1;
  repeated int64 to_user_id = 2;
  protocol.Protocol proto = 3;
}
message PushMsgResponse {}

message PushNotificationRequest {
  repeated int64 to_user_id = 1;
  protocol.Protocol proto = 2;
}

message PushNotificationResponse {}

service Comet {
  rpc PushNotification(PushNotificationRequest) returns(PushNotificationResponse);
  rpc PushMessage(PushMsgRequest) returns(PushMsgResponse);
}